--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "nodemon": "./node_modules/.bin/nodemon"
+    "nodemon": "./node_modules/.bin/nodemon",
+    "seed": "node seedDummyData.js"
   },
   "type": "module",
   "dependencies": {
@@ -9,7 +10,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-rate-limit": "^7.3.0",
     "googleapis": "^144.0.0",
