--- a/front-end/.gitignore
+++ b/front-end/.gitignore
@@ -4,6 +4,12 @@ dist
 dist-ssr
 *.local
 
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -15,4 +21,4 @@ dist-ssr
 *.sln
 *.sw?
 
-package-lock.json
+package-lock.jsonfront-end/.env
