--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,7 @@
     "chartjs-adapter-moment": "^1.0.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
